nothing new jjust link changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="section2">
 
                 <div id="nav">
-                    <a class="navClass" href="Index.html">Home</a> 
+                    <a class="navClass" href="index.html">Home</a> 
                     <a class="navClass"  href="service.html">Services</a>
                     <a class="navClass"  href="Team.html">Team</a>
                     <a class="navClass"  href="Blogs.html">Blogs</a>
